--- a/layouts/AmHeader/AmHeader.scss
+++ b/layouts/AmHeader/AmHeader.scss
@@ -107,3 +107,84 @@
     flex:1;
   }
 }
+
+.call-button-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.call-button {
+  background-color: #1B4D07; /* Verde */
+  border-radius: 4px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 12px;
+}
+
+.call-button a {
+  color: white;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.call-button .icon {
+  margin-right: 8px;
+}
+
+.call-button .fas {
+  font-size: 18px;
+}
+
+.call-button .text {
+  // font-weight: bold;
+  // font-size: 30px;
+  font-family: 'Poppins', sans-serif; 
+}
+
+.call-button .spanish {
+  font-size: 14px;
+  font-weight: normal;
+}
+
+.call-button-icon {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+  color: #FFF;
+}
+
+.call-text-number {
+  color: #FFAE00; 
+  display: block; 
+  width: 100%; 
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.call-text-info {
+  font-size: 12px;
+  font-weight: normal;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .call-button {
+    padding: 6px 8px;
+  }
+
+  .call-button .fas {
+    font-size: 16px;
+  }
+
+  .call-button .text {
+    font-size: 18px;
+  }
+
+  .call-button .spanish {
+    font-size: 12px;
+  }
+}
