--- a/layouts/AmHeader/AmHeader.scss
+++ b/layouts/AmHeader/AmHeader.scss
@@ -112,6 +112,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  
 }
 
 .call-button {
@@ -120,7 +121,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  padding: 8px 12px;
+  padding: 4px;
 }
 
 .call-button a {
@@ -128,19 +129,25 @@
   text-decoration: none;
   display: flex;
   align-items: center;
+  padding: 0px;
+  margin: 0px;
 }
 
 .call-button .icon {
-  margin-right: 8px;
+  margin-right: 12px;
 }
 
 .call-button .fas {
-  font-size: 18px;
+  font-size: 8px;
 }
 
 .call-button .text {
-  // font-weight: bold;
-  // font-size: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-left: 0px;
+  padding-right: 4px;
   font-family: 'Poppins', sans-serif; 
 }
 
@@ -150,8 +157,8 @@
 }
 
 .call-button-icon {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   margin-right: 10px;
   color: #FFF;
 }
@@ -160,31 +167,14 @@
   color: #FFAE00; 
   display: block; 
   width: 100%; 
-  font-size: 20px;
+  font-size: 18px;
   text-align: center;
   font-weight: bold;
 }
 
 .call-text-info {
-  font-size: 12px;
+  text-align: center;
+  font-size: 8px;
   font-weight: normal;
-}
-
-/* Responsive */
-@media (max-width: 768px) {
-  .call-button {
-    padding: 6px 8px;
-  }
-
-  .call-button .fas {
-    font-size: 16px;
-  }
-
-  .call-button .text {
-    font-size: 18px;
-  }
-
-  .call-button .spanish {
-    font-size: 12px;
-  }
+  text-transform: uppercase;
 }
