--- a/layouts/Nav/Nav.scss
+++ b/layouts/Nav/Nav.scss
@@ -203,7 +203,8 @@
 
 .call-button-container {
   display: flex;
-  justify-content: center;
+  justify-content: end;
+  padding-right: 20px;
   width: 100%;
 }
 
