Se agrego enlance para el telefono en el footer

--- a/layouts/AmFooter/AmFooter.html
+++ b/layouts/AmFooter/AmFooter.html
@@ -66,9 +66,9 @@
       <ul>
         <li>{{ $t('contact-t1') }}</li>
         <li>
-          <nuxt-link :to="localePath('contact')">
+          <a onclick="return gtag_report_conversion('tel:(305) 827-8484');" href="tel:(305) 827-8484">
             {{ $t('contact-t2') }}
-          </nuxt-link>
+          </a>
         </li>
       </ul>
     </div>
