reemplazo de price balance, por sale price

--- a/components/AmCarCompare/AmCarCompare.html
+++ b/components/AmCarCompare/AmCarCompare.html
@@ -26,7 +26,7 @@
             <span v-if=" car.Price > 0 ">${{ carPayment }}</span>
           </div>
           <div class="price">
-            <span v-if=" car.Price > 0 ">Price balance</span>
+            <span v-if=" car.Price > 0 ">Sale price</span>
             <span v-else>Call For More Info!</span>
             <span v-if=" car.Price > 0 ">${{ car.Price.Value }}</span>
           </div>
