--- a/components/AmCarCard/AmCarCard.html
+++ b/components/AmCarCard/AmCarCard.html
@@ -33,7 +33,7 @@
           <span v-if=' car && car.RetailPrice.Value > 0 '>${{ carPayment }}</span>
         </div>
         <div class='price'>
-          <span v-if=' car.RetailPrice.Value > 0'>{{ !Campaign.has ? '*Price balance' : 'Price' }}</span>
+          <span v-if=' car.RetailPrice.Value > 0'>{{ !Campaign.has ? '*Sale price' : 'Price' }}</span>
           <span v-else>Call For More Info!</span>
           <span v-if=' car.RetailPrice.Value > 0 '>${{ discount }}</span>
         </div>
