Cambio de links en buy y shop car

--- a/components/AmHero/AmHero.html
+++ b/components/AmHero/AmHero.html
@@ -8,7 +8,7 @@
         <AmSearchCar display='simple'/>
       </div>
       <div class="browse-all">
-        <nuxt-link :to="localePath('inventory')" class="buy-btn">
+        <nuxt-link :to="'https://express.ambarmotors.com/inventory/used'" class="buy-btn">
           {{$t('buy')}}
         </nuxt-link>
         <span class="divider">-OR-</span>
