--- a/components/AmHeroChristmas/AmHeroChristmas.scss
+++ b/components/AmHeroChristmas/AmHeroChristmas.scss
@@ -52,6 +52,7 @@
       }
 
       .search {
+        display: none;
         width: 473px;
         margin-top:30px;
         @media #{$media-movil, $media-iphone} {
