Se comenta el div del search

--- a/components/AmHeroChristmas/AmHeroChristmas.html
+++ b/components/AmHeroChristmas/AmHeroChristmas.html
@@ -4,9 +4,9 @@
     <div class="left">
       <span class="company-name">AMBARMOTORS</span>
       <h1>{{$t('title1')}}</h1>
-      <div class="search">
+      <!-- <div class="search">
         <AmSearchCar display='simple'/>
-      </div>
+      </div> -->
       <div class="browse-all">
         <nuxt-link :to="localePath('inventory')">
           {{$t('browse_all')}}
