--- a/components/AmHero/AmHero.html
+++ b/components/AmHero/AmHero.html
@@ -1,12 +1,12 @@
-
 <section class="am-hero">
   <div class="wrapper">
     <div class="left">
       <h1 class="title-1">{{$t('title1')}}</h1>
       <h1 class="title-2">{{$t('title2')}}</h1>
-      <div class="search">
+      <!-- Componente de búsqueda oculto -->
+      <!-- <div class="search">
         <AmSearchCar display='simple'/>
-      </div>
+      </div> -->
       <div class="browse-all">
         <!-- Enlace directo a la URL externa -->
         <a href="https://express.ambarmotors.com/inventory/used" class="buy-btn">
@@ -19,7 +19,7 @@
         </nuxt-link>
       </div>
     </div>
-    <div class='right'>
+    <div class="right">
       <img src="@/assets/hero/car.png" alt="white vehicle">
     </div>
   </div>
